# Prosthetic-Arm

./: .gitattributes  .gitignore  Dockerfile  EEGNet_BestHPO_FinalModel.keras  README.md  movement_prediction_3_3.h5  pyproject.toml
Classification/: EEGModels.py  movement_prediction.py  weight_pred_new.py  weight_prediction.py
Classification/MovementPrediction/: movement_prediction.py  movement_prediction_model.py  plot_predictions.py  predictor.py
Classification/PhasesClassification/: movement_phase_classifier.py  phase_classifier.ipynb
Classification/WeightPrediction/: weight_pred_new.py  weight_prediction.py
GUI/: GUI.py  app.py  bbox3d.py  check_camera.py  depth_model.py  detection_model.py  hand_tracker.py  pipeline_server.py  requirements.txt  segmentation_model.py
computer_vision/: Dockerfile  README.md  SETUP.md  requirements.txt  requirements_no_dep.txt
computer_vision/scripts/: CONST.py  depth_estimation_testing.py  grasp_identifier.py  grasp_pose_evaluator.py  grasp_validation.py  hand_landmarks.py  main.py  object_detection.py  requirements.txt
conversion/: Ptopy.py  hstopy.py  test_to_npy.py  wstopy.py
docker/: Dockerfile
mne tutorial/: CCA.py  Regression Analysis.ipynb  mne_psd_bandpass_ICA_PCA.py
