[project]
name = "prosthetic-arm"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "filterpy>=1.4.5",
    "lapx>=0.5.2",
    "mediapipe==0.10.18",
    "numpy==1.26.4",
    "opencv-contrib-python==4.10.0.84",
    "opencv-python==4.10.0.84",
    "pyside6>=6.9.0",
    "rich==13.9.4",
    "scikit-learn==1.4.2",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
    "ultralytics==8.3.25",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
